[package]
name = "from-enum-derive"
version = "0.1.1"
authors = ["John Peel <john@dgby.org>"]
categories = ["no-std"]
description = "Provides a derive proc macro for deriving From on enums"
repository = "https://github.com/JohnPeel/from-enum"
documentation = "https://docs.rs/from-enum/latest/from-enum"
edition = "2021"
keywords = ["from", "derive"]
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
